2021-07-16 Blog - Python Generated

--- a/Society_News.html
+++ b/Society_News.html
@@ -72,6 +72,58 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Gates Hoit Map</h2>
+      <hr>
+      <h5>July 16, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 2</div>
+    <img src="blog/imgs/2021-07-16_gateshoitmap/gateshoitmap_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 2</div>
+    <img src="blog/imgs/2021-07-16_gateshoitmap/gateshoitmap_02.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>The Historical Society has been so very fortunate since our founding in 2007. Countless people have donated to our growing collection; providing artifacts, documents, and photographs regarding Chateaugay's history that might otherwise have been discarded or lost.</p>
+
+<p>Every item donated to our organization is accessioned, evaluated by a trained conservator (if appropriate), and then stored in our climate controlled storage areas using approved and accepted archival methods and materials.</p> 
+
+<p>As our collection has grown, some objects have stood out for their significance and uniqueness.
+For example, the oldest written artifact in our collection is a hand drawn map of the world drawn in 1800 by Gates Hoit. He was one of Chateaugay's most influential and consequential early citizens. He arrived with the first wave of settlers following the initial settlement by Nathan Beman and Benjamin Roberts in 1796.</p>
+
+<p>Our archives now contain all of the Gates Hoit papers known to exist. The letters, deeds, ledgers and other documents are now in the process of being accessioned, sorted, conserved, scanned and transcribed so they can be made available to researchers. By scanning and transcribing them, they can be accessed for study without the need to constantly handle the fragile originals.</p>
+
+<p>The first photo below is a high resolution scan of the Gates Hoit map. The second photo was written by Carrie Hoit McCoy. It explains the history, or the provenance, of the map. The writing is on a piece of brown paper that packaged the map when it was in storage in a trunk in the McCoy house on West Main Street.</p> 
+
+<p>This map is just one small part of our constantly growing archival holdings. Thanks everyone for your continued and committed support of our organization.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Reopening, Newsletter, Exhibits and More!</h2>
       <hr>
       <h5>May 18, 2021 | Mick Jarvis</h5>
@@ -83,15 +135,15 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 1</div>
     <img src="blog/imgs/2021-05-18_chsupdate/chsupdate2_01.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -125,7 +177,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Chateaugay Historical Society Update</h2>
@@ -139,63 +191,63 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">6 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">7 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">8 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">9 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_09.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -241,7 +293,7 @@ To keep you all informed, here are some of the activities we have worked on over
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [July 11, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [July 19, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
