--- a/blog.html
+++ b/blog.html
@@ -72,6 +72,58 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Gates Hoit Map</h2>
+      <hr>
+      <h5>July 16, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 2</div>
+    <img src="blog/imgs/2021-07-16_gateshoitmap/gateshoitmap_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 2</div>
+    <img src="blog/imgs/2021-07-16_gateshoitmap/gateshoitmap_02.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>The Historical Society has been so very fortunate since our founding in 2007. Countless people have donated to our growing collection; providing artifacts, documents, and photographs regarding Chateaugay's history that might otherwise have been discarded or lost.</p>
+
+<p>Every item donated to our organization is accessioned, evaluated by a trained conservator (if appropriate), and then stored in our climate controlled storage areas using approved and accepted archival methods and materials.</p> 
+
+<p>As our collection has grown, some objects have stood out for their significance and uniqueness.
+For example, the oldest written artifact in our collection is a hand drawn map of the world drawn in 1800 by Gates Hoit. He was one of Chateaugay's most influential and consequential early citizens. He arrived with the first wave of settlers following the initial settlement by Nathan Beman and Benjamin Roberts in 1796.</p>
+
+<p>Our archives now contain all of the Gates Hoit papers known to exist. The letters, deeds, ledgers and other documents are now in the process of being accessioned, sorted, conserved, scanned and transcribed so they can be made available to researchers. By scanning and transcribing them, they can be accessed for study without the need to constantly handle the fragile originals.</p>
+
+<p>The first photo below is a high resolution scan of the Gates Hoit map. The second photo was written by Carrie Hoit McCoy. It explains the history, or the provenance, of the map. The writing is on a piece of brown paper that packaged the map when it was in storage in a trunk in the McCoy house on West Main Street.</p> 
+
+<p>This map is just one small part of our constantly growing archival holdings. Thanks everyone for your continued and committed support of our organization.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Local Names on Wall that Heals</h2>
       <hr>
       <h5>June 25, 2021 | Mick Jarvis</h5>
@@ -83,21 +135,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-06-25_wallthatheals/wallthatheals_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-06-25_wallthatheals/wallthatheals_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -112,7 +164,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Smith / Alvord / Cook Home on East Main</h2>
@@ -126,33 +178,33 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_04.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -193,258 +245,12 @@ They were fiercely proud of their home and its historical significance. They tre
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Demo on West Main: McCoy and Denio Houses</h2>
-      <hr>
-      <h5>June 6, 2021 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">3 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_03.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">4 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_04.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">5 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_05.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">6 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_06.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">7 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_07.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">8 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_08.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">9 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_09.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">10 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_10.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">11 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_11.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">12 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_12.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">13 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_13.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">14 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_14.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">15 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_15.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">16 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_16.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">17 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_17.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">18 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_18.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">19 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_19.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">20 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_20.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">21 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_21.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">22 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_22.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">23 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_23.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">24 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_24.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">25 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_25.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">26 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_26.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">27 / 27</div>
-    <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_27.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <h4>TRANSITIONS…</h4>
-
-<p>As a wise man once said, “the only constant in life is change.” We can always count on things evolving and changing. Some see change as good, others see it as a negative. Either way, it will happen – that much is guaranteed.</p>
-
-<p>West Main Street is now seeing a significant change. The former McCoy and Denio homes on the south side of West Main are gone, soon to be replaced with a Dollar General store.</p>
-
-<p>I have followed the entire process and have attempted to keep a comprehensive photo record as things have unfolded.</p>
-
-<p>The McCoy house was built by Jonathan Hoit (Herb McCoy Jr.’s great great grandfather) in the early 1830s on a fifty acre parcel of woodland inside what would become the village of Chateaugay. In fact, a document found in the house affirms that Jonathan Hoit built the home from lumber milled from original trees found on the property. </p>
-
-<p>The Denio house was built about fifty years after the McCoy home on a small lot from property sold by the McCoys.</p>
-
-<p>Most of my involvement with this whole process has been in connection with the McCoy home. I had the good fortune to work with Herb McCoy Jr.’s heir as the home was cleaned out. The Historical Society was the recipient of a large quantity of documents, photographs and artifacts, thanks to the diligent, painstaking, and careful sorting of the house’s contents. </p>
-
-<p>The local and family history collected and saved by the five generations of the Hoit/McCoy families that lived there, was quietly waiting to be revealed. The careful sorting and identification of the home’s contents following Herb’s passing, resulted in a treasure trove of significant items which were donated to our archives.</p>
-
-<p>I was able to do a thorough photo record of the McCoy interior, the exteriors of both houses, the subsequent demolitions, and property clearing up through today.</p>
-
-<p>I spent time speaking with the surveyor who was working this morning, laying out the lines for the upcoming construction. While chatting with him and explaining who I was, we talked about recording the whole process. I told him that, down the road – say 50 or 75 years from now, someone from the Historical Society might be doing research about the 2020s. By creating this photographic record, there will be a complete documentation of this event to look back on.</p>
-
-<p>I am preparing an article for a future newsletter issue that will have an in-depth history of the houses and the property which will set the homes in their proper historical context.</p>
-
-<p>For now, here is a selection of 27 of the approximately 500 photos I have taken of the process so far. Some show the interior features of the Hoit/McCoy home, some show the exteriors of both houses, some are of the demolition process, and the last few are of the property this morning (June 6, 2021).</p>
-
-<p>This blog post is as much a Chateaugay “news” story as it is a recording of events for the future. It is presented here with commentary-free, descriptive captions purely as an historical record to be saved and archived for future researchers.</p>
-
-<hr>
-
-<h4>Photo Captions:</h4>
-<li>Image 1 – Stone foundation of the McCoy house. Note the “dry” laid stone on the lower portions. The mortar near the top was added much later.</li>
-<li>Image 2 – Showing detail of wall and roof construction of the south addition to the McCoy house.</li>
-<li>Image 3 – 12 X 12 hand hewn beam that topped the addition walls and supported the log roof purlins.</li>
-<li>Image 4 – Interior of the McCoy dining room and front parlor.</li>
-<li>Image 5 – Showing detail of interior door trim.</li>
-<li>Image 6 – Detail of the stairway trim.</li>
-<li>Image 7 – McCoy house east side exterior.</li>
-<li>Image 8 – From across Rt. 11.</li>
-<li>Image 9 – Exterior of “Denio” house showing the two outbuildings.</li>
-<li>Image 10 – McCoy house west side.</li>
-<li>Image 11 – Denio house east side.</li>
-<li>Image 12 – McCoy house seen from the south.</li>
-<li>Image 13 – Woods behind the McCoy house.</li>
-<li>Image 14 – Barn behind the McCoy house.</li>
-<li>Image 15 – Denio house and barns seen from the south.</li>
-<li>Image 16 – Denio house from the driveway.</li>
-<li>Image 17 – Demolition in progress.</li>
-<li>Image 18 – Demolition in progress.</li>
-<li>Image 19 – Demo complete and before the debris was ground and removed.</li>
-<li>Image 20 – Denio foundation.</li>
-<li>Image 21 – McCoy property as trees are cleared.</li>
-<li>Image 22 – Big maples being removed.</li>
-<li>Image 23 – Topsoil being stockpiled.</li>
-<li>Image 24 – This morning (June 6, 2021) – Both lots from the south. Topsoil piled to the left.</li>
-<li>Image 25 – This morning (June 6, 2021) – The lots from the sidewalk.</li>
-<li>Image 26 – This morning (June 6, 2021) – Remainder of Denio foundation to be removed.</li>
-<li>Image 27 – This morning (June 6, 2021) – The two lots from across the street.</li>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [July 11, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [July 19, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
