--- a/People.html
+++ b/People.html
@@ -72,6 +72,98 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Carrying the Mail in the Olden Days</h2>
+      <hr>
+      <h5>August 15, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 2</div>
+    <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 2</div>
+    <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_02.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>I have been researching the Hoit/McCoy home that sat on West Main Street. It was built in by Jonathan Hoit in the 1830s. Before beginning research on the house itself and its actual construction, etc., I began by looking at what life was like back then in our hometown.</p>
+
+<p>I am looking into how the community looked back then and what businesses had been established, etc. I have also spent time looking for information about the mail at that time: when was it delivered, how was it delivered and what the entire process was like.  Here is part of the story of the US Mail in Chateaugay and the North Country almost a two hundred years ago.</p>
+
+<p>For example, the mail was carried between communities by the stage coaches that plied the dirt roads that wound across northern New York. The mail arrived at the Chateaugay Post Office at the four corners six times a week. It arrived from the west at five pm on Tuesdays, Thursdays and Saturdays and from points east at noon on Mondays, Wednesdays and Fridays. (Eventually the mail would be carried by the railroad beginning shortly after it opened in 1850.)</p>
+
+<p>Mail delivery was one of the main ways the community kept abreast of the national and world news as newspapers were often part of the mail bag contents. Some local citizens subscribed to newspapers from Albany, New York City or other large cities like Chicago and Washington, DC.</p>
+
+<p>The roads that the stages travelled were all unpaved and very rough. They could be muddy or dry and dusty depending on the weather and the seasons. Paved roads would only begin to appear in the US in the late 1800s, and even then, they appeared in the larger cities first. By 1904, only about one sixth of rural roads were paved and that total was only up to about one half of rural roads by 1935 or so.</p>
+
+<p>So, the stage drivers/mail carriers had to contend with terrible road conditions in the 1830s and 40s. This was one of the reasons for so many taverns and inns along the main roads. Horses tired quickly in such demanding road conditions, and the stops allowed for a change of teams and a chance for the stage driver and any passengers to get out and try to shake off some of the discomfort and monotony of the ride and get something to eat.</p>
+
+<p>Chateaugay had its own legendary stage driver. Josiah “Bone” Selleck drove routes in the North Country for many, many years. His home was on the main road, a few miles east of the four corners. He died in 1891 at the age of 82 and is buried in Smith Cemetery, just east of the village.</p>
+
+<p>The first photo here is of his headstone in Smith Cemetery. (Another long-time stage driver, who came along later than Bone Selleck and spanned the turn of the last century, was Pratt Hill. The photo included here shows Hill on his Tally-Ho coach. The stages of the 1830s and 40s would have looked much like the coach driven by Hill but this later version had much better suspension which made for a somewhat “smoother” ride than the earlier versions.)</p>
+
+<p>But, back to the early 1800s. Chateaugay and northern New York were not immune to another danger associated with the stagecoach mail carriers; robbers, highwaymen, hold-up men—were among the terms used to describe them. They were looking for anything valuable that might be carried by the passengers, but the mail also represented a potential source of booty.</p>
+
+<p>The following story of a mail carrier in the “Chateaugay Woods” took place in the 1830s. This printing came from the February 17, 1867 edition of the Daily Alta California, a San Francisco paper. This same account also appeared in many local and area papers, as well as others throughout the US over the years. I used this particular version as this scan was the clearest and the easiest to transcribe.</p>
+
+<p>It is true? Who knows? It could be gospel. We will never know. All I can attest to is that it appeared in scores of newspapers in the 1800s. Even the US Mail produced interesting stories 150 years ago!</p>
+
+<p>Here’s the story of mail delivery and a wheat bran holdup in the Chateaugay Woods:</p>
+
+
+<p><i>In the early annals of our country, many instances of mail robbery are found, some of which occasioned the display of great intrepidity and daring, as the perusal of the following pages will show.</i></p>
+
+<p><i>While the country was yet thinly settled, and the mails were transported on horseback, or in different kinds of vehicles, from the gig to the stage-coach, often through extensive forests, which afforded every facility for robbery, the office of stage-driver or mail carrier was no sinecure (easy job). Resolute men were required for the service, who could handle a pistol as well as a whip.</i></p>
+
+<p><i>Some thirty or forty years ago [in the 1830s], a mail coach ran in the northern part of the State of New York, through the famous “Chateaugay Woods.” The forest was many miles in extent, and common fame and many legends gave it the reputation of a noted place for freebooters and highwaymen.</i></p>
+
+<p><i>One morning the stage driver on this route had occasion to examine his pistols, and found, instead of the usual charge, that they were loaded with wheat bran! A daring villain had, through an accomplice, disarmed the driver preparatory to waylaying him. He drew the charges, cleaned the weapons, and carefully loaded them with powder and ball.</i></p>
+
+<p><i>That afternoon he mounted his stage for his drive through the Chateaugay Woods. Whistling as he went, he “cracked up” his leaders and drove into the forest. Just about at the center of the woods, a man sprang out from behind a tree and took the lead horse by the bit.</i></p>
+
+<p><i>“I say, driver,” said the footpad [a robber who had no horse], with consummate coolness, “I want to take a look at that mail.”</p></i>
+
+<p><i>“Yes, you do, no doubt, want to overhaul my mails,” replies the driver; “but I can’t be so free, unless you show me your commission. I’m the driver here, and I never give up my mails except to one regularly authorized.”</p></i>
+
+<p><i>“Oh, you don’t, eh? Well, here’s my authority,” showing the butt of a large pistol partly concealed in his bosom. “Now, dismount and bear a hand, my fine fellow, for you see I’ve got some documents about me.”</i></p>
+
+<p><i>“Yes, and so’ve I,” says the driver, instantly leveling his own trusty weapon at the highwaymen.</i></p>
+
+<p><i>“Oh, you won’t hurt nobody, I guess: I’ve seen boys playing soger [soldier] before now.”</i></p>
+
+<p><i>“Just drop those reins,” says the keeper of Uncle Sam’s mail bags, “or I take the consequences.”</i></p>
+
+<p><i>Oh, now you’re joking, my fine lad! But come, look alive, for I’m in a hurry, it’s nearly night. </i></p>
+
+<p><i>A sharp report echoed through the forests and the disciple of Dick Turpin [a famous English highwayman of the mid 1700s] was stretched upon the ground. One groan and all was over. The ball had entered his temple.</i></p>
+
+<p><i>The driver lifted the body into the coach, drove to the next stopping place, related the circumstances, and gave himself up. A brief examination before a magistrate resulted in his acquittal, and the highwaymen about the Chateaugay Woods learned that pistols can be dangerous weapons, even if they were loaded with wheat bran, provided they were in the hands of one who knew how to use them.</i></p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Local Names on Wall that Heals</h2>
       <hr>
       <h5>June 25, 2021 | Mick Jarvis</h5>
@@ -83,21 +175,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-06-25_wallthatheals/wallthatheals_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-06-25_wallthatheals/wallthatheals_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -112,7 +204,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Smith / Alvord / Cook Home on East Main</h2>
@@ -126,33 +218,33 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_04.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -194,7 +286,7 @@ They were fiercely proud of their home and its historical significance. They tre
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Jake's Red Hots</h2>
@@ -208,21 +300,21 @@ They were fiercely proud of their home and its historical significance. They tre
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_2.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 </div>
 <br>
 
@@ -245,7 +337,7 @@ They were fiercely proud of their home and its historical significance. They tre
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Chateaugay Dairy's Delivery Driver Owen Murray</h2>
@@ -259,21 +351,21 @@ They were fiercely proud of their home and its historical significance. They tre
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_2.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
 </div>
 <br>
 
@@ -292,7 +384,7 @@ They were fiercely proud of their home and its historical significance. They tre
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [July 19, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [August 22, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
