Blog Post Python Generated
09/05 & 09/10 2021

--- a/People.html
+++ b/People.html
@@ -72,6 +72,127 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>The Sunset Inn 1872-1945</h2>
+      <hr>
+      <h5>September 10, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">5 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_05.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">6 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_06.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">7 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_07.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">8 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_08.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">9 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_09.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">10 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_10.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>The histories of Chateaugay and the Chateaugay Lakes have been very much intertwined from the earliest days of settlements at each place. The Chateaugay Historical Society has regularly included articles about Chateaugay Lake in our quarterly newsletter. Stories of both communities help to weave the story of our area over the last 200+ years.</p>
+
+<p>This blog post began when a friend of mine, Jesse Kaska, posted a photo on the “Lyon Mountain, Ny” Facebook page. The image he shared is the first one posted below. It shows a sign directing people to the “Sunset Inn on Chateaugay Lake”. </p>
+
+<p>Jesse’s post immediately set off a flurry of comments and questions about the hotel. I wrote a very brief sketch of the inn’s history for the Lyon Mountain page but quickly decided that this week’s blog post should be the story of the Sunset Inn. Here is a profile of the hotel in a bit more detail.</p>
+
+<p>In the early 1870s, Captain W.R. Tupper bought lakefront land on what is now the Sunset Road. In 1872 he built a small hotel on the site and hosted visitors to the Lake. He also operated a side-wheeled motor launch which would ferry his guests from the stagecoach stop at the north end of the lower lake up to his hotel. The paddle wheeler would motor the length of the Lower Lake, its two side mounted paddlewheels churning the water, and make its way up the Narrows, emerge on the Upper Lake and eventually arrive at Tupper’s hostelry (which he called the “Adirondack House” and later, “Tupper’s Hotel”). The captain even referred to the dining room at the hotel as “Tupper’s Hall” where he hosted banquets and dances. This side wheeler, by the way, is said to have been the first of many motor launches to ply the waters of the Upper and Lower Lakes.</p>
+
+<p>The story goes that on weekends, miners who worked for the Chateaugay Ore and Iron Company would frequent Tupper’s to enjoy the drinks he had in stock.  Evidently, the president of the company, Andrew Williams, didn’t think much of his employees’ weekend activities there and thought it an unnecessary distraction for the workers, so he bought the property from Tupper and had thoughts of tearing down the small hotel.</p>
+
+<p>Shortly after, Williams was approached by Dr. M.D. Ralph of Malone with the idea for a larger, more upscale hotel to cater to the growing summer clientele on the Lakes. Eventually, a more refined hotel emerged as the Tupper building was renovated and enlarged. It was leased by Dr. Ralph. Understandably, as it was named by the doctor, it quickly became known as “Ralph’s” and was the largest and one of the most popular resorts on the Upper Lake.</p>
+
+<p>Under Williams’ ownership, the main hotel had four levels with expansive verandas. The main floor contained the office, a reading room, a parlor and a huge dining room. The upper three floors held the guest rooms. There was also a two story annex and two two-story guest cottages. The entire facility could accommodate 125 guests, which made it the largest hotel on both lakes. To illustrate the extensive nature of the renovations, the main hotel refrigerator was so large that it could hold eighty tons of ice to keep the kitchen’s food supply adequately cooled. All of the facility’s grounds were also expanded and developed to include croquet, tennis grounds, new docks, larger boat house containing all new boats for the guests (and guest rooms above it), and other amenities.</p> 
+
+<p>In 1878, Dr. Ralph became the much-expanded hotel’s owner. He owned it for the next several decades and hired various managers to oversee the day-to-day operations. The hotel became known as the most posh on the lake. In fact, in the early years, guests were expected to “dress” for dinner each evening.</p>
+
+<p>In 1907, it was purchased by Andrew Morrison who renamed it "Morrison’s". He was an experienced hotel man who immediately upgraded the facility. Gas lights were installed to light the entire hotel complex and indoor plumbing was upgraded with the installation of several bathrooms throughout the guest spaces. Morrison would operate the hotel for the next several years. In 1917, Morrison sold to William Dalenz who only remained for three years.</p>
+
+<p>In 1920, Arthur T. Smith of Montreal bought it from Dalenz and named it the "Sunset Inn". Smith had managed and owned restaurants and hotels in Montreal and brought a great deal of experience to the Chateaugay Lake resort.</p>
+
+<p>In 1923, Chateaugay businessman, C.W. Sprague, bought the hotel but only operated it for one season. The Sunset was closed for the 1924 and 1925 seasons. In 1926, Arthur Smith resumed ownership of the hotel (presumably Sprague had defaulted on the mortgage held by Smith).</p>
+
+<p>Smith ran the inn for the next decade. Two factors began to work against him. The roaring “Resort Era” on Chateaugay Lake was waning. The summer visitor traffic that had descended on the Lake for over ninety years was slowing. All of the hotels were feeling the pinch. In addition, the stock market crash on October 24th 1929 and the beginning of what would come to be called “The Great Depression” caused even less visitors to the resorts.</p>
+
+<p>Henry Cook of Chateaugay managed and ran the hotel for the 1935 season; Smith’s last as owner. That year, Smith began to fall behind in his mortgage payments and the die was cast as his ownership was destined to end. </p>
+
+<p>Mrs. Isabelle Shufelt became the new owner when she bought the property at a mortgage foreclosure sale in early 1936. Her son-in-law, Henry Cook, took over long-term management of the hotel at that point. He later owned and ran the hotel until 1940 when it closed for good. </p>
+
+<p>During the years the hotel was known as the “Sunset Inn”, it became the site of area meetings and annual banquets. The pleasant surroundings and first-class facility made it the preferred destination for many groups and organizations. Among those groups regularly scheduling events at the hotel were: the Chateaugay Rotary Club, the Franklin County Veterinarian Association, the Chateaugay Court of Catholic Daughters, various bowling leagues, Lyon Mountain Miners baseball team, and many others.</p>
+
+<p>The main building of the Sunset Inn was demolished in 1945. The Cook family had sold off portions of the large property over the years but kept the two cottages. Carolyn Cook Campbell made one of the cottages her camp on the Lake.</p> 
+
+<p>The long and event-filled history of this property on the Sunset Road is a major part of the story of the "Resort Era" on Chateaugay Lake.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Carrying the Mail in the Olden Days</h2>
       <hr>
       <h5>August 15, 2021 | Mick Jarvis</h5>
@@ -83,21 +204,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -161,7 +282,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Local Names on Wall that Heals</h2>
@@ -175,21 +296,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-06-25_wallthatheals/wallthatheals_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-06-25_wallthatheals/wallthatheals_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -204,7 +325,7 @@
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Smith / Alvord / Cook Home on East Main</h2>
@@ -218,33 +339,33 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">1 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">2 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">3 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">4 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_04.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 </div>
 <br>
 
@@ -286,7 +407,7 @@ They were fiercely proud of their home and its historical significance. They tre
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Jake's Red Hots</h2>
@@ -300,21 +421,21 @@ They were fiercely proud of their home and its historical significance. They tre
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_2.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
 </div>
 <br>
 
@@ -337,7 +458,7 @@ They were fiercely proud of their home and its historical significance. They tre
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Chateaugay Dairy's Delivery Driver Owen Murray</h2>
@@ -351,21 +472,21 @@ They were fiercely proud of their home and its historical significance. They tre
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_2.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
 </div>
 <br>
 
@@ -384,7 +505,7 @@ They were fiercely proud of their home and its historical significance. They tre
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [August 22, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [September 16, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
