--- a/blog.html
+++ b/blog.html
@@ -72,6 +72,186 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>The Sunset Inn 1872-1945</h2>
+      <hr>
+      <h5>September 10, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">5 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_05.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">6 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_06.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">7 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_07.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">8 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_08.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">9 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_09.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">10 / 10</div>
+    <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_10.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>The histories of Chateaugay and the Chateaugay Lakes have been very much intertwined from the earliest days of settlements at each place. The Chateaugay Historical Society has regularly included articles about Chateaugay Lake in our quarterly newsletter. Stories of both communities help to weave the story of our area over the last 200+ years.</p>
+
+<p>This blog post began when a friend of mine, Jesse Kaska, posted a photo on the “Lyon Mountain, Ny” Facebook page. The image he shared is the first one posted below. It shows a sign directing people to the “Sunset Inn on Chateaugay Lake”. </p>
+
+<p>Jesse’s post immediately set off a flurry of comments and questions about the hotel. I wrote a very brief sketch of the inn’s history for the Lyon Mountain page but quickly decided that this week’s blog post should be the story of the Sunset Inn. Here is a profile of the hotel in a bit more detail.</p>
+
+<p>In the early 1870s, Captain W.R. Tupper bought lakefront land on what is now the Sunset Road. In 1872 he built a small hotel on the site and hosted visitors to the Lake. He also operated a side-wheeled motor launch which would ferry his guests from the stagecoach stop at the north end of the lower lake up to his hotel. The paddle wheeler would motor the length of the Lower Lake, its two side mounted paddlewheels churning the water, and make its way up the Narrows, emerge on the Upper Lake and eventually arrive at Tupper’s hostelry (which he called the “Adirondack House” and later, “Tupper’s Hotel”). The captain even referred to the dining room at the hotel as “Tupper’s Hall” where he hosted banquets and dances. This side wheeler, by the way, is said to have been the first of many motor launches to ply the waters of the Upper and Lower Lakes.</p>
+
+<p>The story goes that on weekends, miners who worked for the Chateaugay Ore and Iron Company would frequent Tupper’s to enjoy the drinks he had in stock.  Evidently, the president of the company, Andrew Williams, didn’t think much of his employees’ weekend activities there and thought it an unnecessary distraction for the workers, so he bought the property from Tupper and had thoughts of tearing down the small hotel.</p>
+
+<p>Shortly after, Williams was approached by Dr. M.D. Ralph of Malone with the idea for a larger, more upscale hotel to cater to the growing summer clientele on the Lakes. Eventually, a more refined hotel emerged as the Tupper building was renovated and enlarged. It was leased by Dr. Ralph. Understandably, as it was named by the doctor, it quickly became known as “Ralph’s” and was the largest and one of the most popular resorts on the Upper Lake.</p>
+
+<p>Under Williams’ ownership, the main hotel had four levels with expansive verandas. The main floor contained the office, a reading room, a parlor and a huge dining room. The upper three floors held the guest rooms. There was also a two story annex and two two-story guest cottages. The entire facility could accommodate 125 guests, which made it the largest hotel on both lakes. To illustrate the extensive nature of the renovations, the main hotel refrigerator was so large that it could hold eighty tons of ice to keep the kitchen’s food supply adequately cooled. All of the facility’s grounds were also expanded and developed to include croquet, tennis grounds, new docks, larger boat house containing all new boats for the guests (and guest rooms above it), and other amenities.</p> 
+
+<p>In 1878, Dr. Ralph became the much-expanded hotel’s owner. He owned it for the next several decades and hired various managers to oversee the day-to-day operations. The hotel became known as the most posh on the lake. In fact, in the early years, guests were expected to “dress” for dinner each evening.</p>
+
+<p>In 1907, it was purchased by Andrew Morrison who renamed it "Morrison’s". He was an experienced hotel man who immediately upgraded the facility. Gas lights were installed to light the entire hotel complex and indoor plumbing was upgraded with the installation of several bathrooms throughout the guest spaces. Morrison would operate the hotel for the next several years. In 1917, Morrison sold to William Dalenz who only remained for three years.</p>
+
+<p>In 1920, Arthur T. Smith of Montreal bought it from Dalenz and named it the "Sunset Inn". Smith had managed and owned restaurants and hotels in Montreal and brought a great deal of experience to the Chateaugay Lake resort.</p>
+
+<p>In 1923, Chateaugay businessman, C.W. Sprague, bought the hotel but only operated it for one season. The Sunset was closed for the 1924 and 1925 seasons. In 1926, Arthur Smith resumed ownership of the hotel (presumably Sprague had defaulted on the mortgage held by Smith).</p>
+
+<p>Smith ran the inn for the next decade. Two factors began to work against him. The roaring “Resort Era” on Chateaugay Lake was waning. The summer visitor traffic that had descended on the Lake for over ninety years was slowing. All of the hotels were feeling the pinch. In addition, the stock market crash on October 24th 1929 and the beginning of what would come to be called “The Great Depression” caused even less visitors to the resorts.</p>
+
+<p>Henry Cook of Chateaugay managed and ran the hotel for the 1935 season; Smith’s last as owner. That year, Smith began to fall behind in his mortgage payments and the die was cast as his ownership was destined to end. </p>
+
+<p>Mrs. Isabelle Shufelt became the new owner when she bought the property at a mortgage foreclosure sale in early 1936. Her son-in-law, Henry Cook, took over long-term management of the hotel at that point. He later owned and ran the hotel until 1940 when it closed for good. </p>
+
+<p>During the years the hotel was known as the “Sunset Inn”, it became the site of area meetings and annual banquets. The pleasant surroundings and first-class facility made it the preferred destination for many groups and organizations. Among those groups regularly scheduling events at the hotel were: the Chateaugay Rotary Club, the Franklin County Veterinarian Association, the Chateaugay Court of Catholic Daughters, various bowling leagues, Lyon Mountain Miners baseball team, and many others.</p>
+
+<p>The main building of the Sunset Inn was demolished in 1945. The Cook family had sold off portions of the large property over the years but kept the two cottages. Carolyn Cook Campbell made one of the cottages her camp on the Lake.</p> 
+
+<p>The long and event-filled history of this property on the Sunset Road is a major part of the story of the "Resort Era" on Chateaugay Lake.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
+      <h2>Recording Change on West Main</h2>
+      <hr>
+      <h5>September 5, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">1 / 3</div>
+    <img src="blog/imgs/2021-09-05_recordingchange/recordingchange_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">2 / 3</div>
+    <img src="blog/imgs/2021-09-05_recordingchange/recordingchange_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">3 / 3</div>
+    <img src="blog/imgs/2021-09-05_recordingchange/recordingchange_03.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>As much as some of us do not like it, change happens constantly. It is inevitable. In the case of the Historical Society and its mission, when notable buildings, etc. disappear we may be disappointed with their removal, but we forge ahead with our objective to record and archive them for those who will come after us.</p>
+
+<p>To that end, here are three photos. The first is of the McCoy house on West Main Street taken on May 5 of this year. The second is of the same property taken September 5th from the same vantage point (on the sidewalk in front of where the Denio house stood, looking east to the McCoy home). The third was taken of the home and the barns and stable behind it in the 1920s, looking from the East.</p>
+
+<p>To record this particular home, we have taken hundreds of photos. There is a set showing the original exterior views including the wooded area behind the house. Another set of images has documented the complete interior of the house from the attic to the basement. Still more albums record the demolition of the McCoy and Denio houses and the subsequent clearing of the lots. The final photo file shows the construction of the Dollar General store, with photos taken each weekend throughout the construction process. The photo here includes a few cars belonging to folks working this morning to stock the shelves of merchandise. It appears that the opening is getting closer.</p>
+
+<p>In addition to the photo files we have taken for our archives, we have a file containing house scenes from over the years, donated by the McCoy estate. Also, a history of the McCoy house has been written and is ready to appear as an article in an upcoming issue of our quarterly newsletter.</p>
+
+<p>While our group has many documents and objects which we maintain in the Archival Center as an historical collection, in cases such as these changes involving homes, etc., we have neither the means nor the mission to save and/or to do restoration. So many of Chateaugay’s early and noteworthy structures have been demolished over the years, at least this one has been documented as thoroughly as we possibly could. We can’t save and maintain them all, but we can record and note their existence for people seeking information in future years.</p>
+
+<p>Imagine if someone had taken extensive photographs of the fairgrounds at the end of Collins Street, or the Chasm House hotel, or the train yard with the passenger, freight depots, the warehouses and various rail sidings, or the High Falls Pulp and Paper Company, or the Chateaugay Pulp and Paper Company, and so many other local landmarks from days past. We would certainly be grateful to be able to come upon boxes of such photographs today.</p>
+
+<p>By the same token, hopefully history enthusiasts will be delighted to come upon the archived images of this house and the changes happening there, a hundred years from now.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog1">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Carrying the Mail in the Olden Days</h2>
       <hr>
       <h5>August 15, 2021 | Mick Jarvis</h5>
@@ -83,21 +263,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -160,117 +340,12 @@
 </div>
 
 
-<!-- Site Page -->
-<div id="blog2">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Chateaugay Hotel Photos</h2>
-      <hr>
-      <h5>July 23, 2021 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides2 none">
-     <div class="numbertext">1 / 4</div>
-    <img src="blog/imgs/2021-07-23_chateaugayhotel/chateaugayhotel_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides2 none">
-     <div class="numbertext">2 / 4</div>
-    <img src="blog/imgs/2021-07-23_chateaugayhotel/chateaugayhotel_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides2 none">
-     <div class="numbertext">3 / 4</div>
-    <img src="blog/imgs/2021-07-23_chateaugayhotel/chateaugayhotel_03.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides2 none">
-     <div class="numbertext">4 / 4</div>
-    <img src="blog/imgs/2021-07-23_chateaugayhotel/chateaugayhotel_04.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>Just working on organizing some photo files and came across these images of the Chateaugay Hotel back in the day.</p>
-        </div>
-    </div>
-</div>
-
-
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Gates Hoit Map</h2>
-      <hr>
-      <h5>July 16, 2021 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 2</div>
-    <img src="blog/imgs/2021-07-16_gateshoitmap/gateshoitmap_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 2</div>
-    <img src="blog/imgs/2021-07-16_gateshoitmap/gateshoitmap_02.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>The Historical Society has been so very fortunate since our founding in 2007. Countless people have donated to our growing collection; providing artifacts, documents, and photographs regarding Chateaugay's history that might otherwise have been discarded or lost.</p>
-
-<p>Every item donated to our organization is accessioned, evaluated by a trained conservator (if appropriate), and then stored in our climate controlled storage areas using approved and accepted archival methods and materials.</p> 
-
-<p>As our collection has grown, some objects have stood out for their significance and uniqueness.
-For example, the oldest written artifact in our collection is a hand drawn map of the world drawn in 1800 by Gates Hoit. He was one of Chateaugay's most influential and consequential early citizens. He arrived with the first wave of settlers following the initial settlement by Nathan Beman and Benjamin Roberts in 1796.</p>
-
-<p>Our archives now contain all of the Gates Hoit papers known to exist. The letters, deeds, ledgers and other documents are now in the process of being accessioned, sorted, conserved, scanned and transcribed so they can be made available to researchers. By scanning and transcribing them, they can be accessed for study without the need to constantly handle the fragile originals.</p>
-
-<p>The first photo below is a high resolution scan of the Gates Hoit map. The second photo was written by Carrie Hoit McCoy. It explains the history, or the provenance, of the map. The writing is on a piece of brown paper that packaged the map when it was in storage in a trunk in the McCoy house on West Main Street.</p> 
-
-<p>This map is just one small part of our constantly growing archival holdings. Thanks everyone for your continued and committed support of our organization.</p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [August 22, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [September 16, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
